<resources>
    <string name="app_name">My Application</string>
    <string name="email_error">Please enter valid email</string>
    <string name="error_password1">Please enter valid password \nsee criteria below</string>
    <string name="error_password2">Please enter same password</string>
    <string name="error_account_exist">An account already exist for this email</string>
    <string name="create_an_account">Create an Account</string>
    <string name="email_address">Email Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="see_criteria_below">See Criteria Below</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="enter_password2">Enter Password</string>
    <string name="password_criteria">Your password should have a minimum of \ncharacter and contain at least one \nnumber, one uppercase and one lower \n case letters. You can use special characters.</string>
    <string name="btn_next">Next</string>
    <string name="company_desc">GreenFlag class customer can\ncreate an account to access</string>
    <string name="car_health_updates">Car health updates</string>
    <string name="request_a_rescue_online">Request a rescue online</string>
    <string name="policy_information">Policy Information</string>
    <string name="btn_create_an_account">Create an Account</string>
</resources>