<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/ibtn_back_to_main"
        android:layout_width="58dp"
        android:layout_height="77dp"
        android:backgroundTint="@color/black"
        android:src="@drawable/back_to_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="349dp"
        android:layout_height="77dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/ibtn_back_to_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibtn_back_to_main"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_address"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="257dp"
        android:layout_height="54dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:background="@drawable/text_red_border"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/enter_email"
            android:minHeight="48dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:layout_marginTop="3dp"
            android:layout_marginStart="3dp"/>
        <ImageView
            android:id="@+id/iv_txt1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/ll_email"
        app:layout_constraintTop_toBottomOf="@+id/ll_email" />

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="257dp"
        android:layout_height="54dp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:background="@drawable/text_red_border"
        android:orientation="horizontal">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/see_criteria_below"
        android:textColorHint="#78909C"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_marginTop="3dp"
        android:layout_marginStart="3dp"
        android:password="true"/>
        <ImageView
            android:id="@+id/iv_txt2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/ll_password"
        app:layout_constraintTop_toBottomOf="@+id/ll_password" />

    <LinearLayout
        android:id="@+id/ll_password2"
        android:layout_width="257dp"
        android:layout_height="54dp"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:background="@drawable/text_red_border">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password2"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/enter_password2"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:singleLine="true"
        android:layout_marginTop="3dp"
        android:layout_marginStart="3dp"
        android:password="true"/>

        <ImageView
            android:id="@+id/iv_txt3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/red_borders"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/ll_password2"
        app:layout_constraintTop_toBottomOf="@+id/ll_password2">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="10dp"
            android:src="@mipmap/im_error_round" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="3dp"
            android:gravity="center"
            android:text=""
            android:textColor="#9E0404"
            app:layout_constraintStart_toStartOf="@+id/et_password2"
            app:layout_constraintTop_toBottomOf="@+id/et_password2" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_criteria"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/ll_error"
        app:layout_constraintTop_toBottomOf="@+id/ll_error"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:enabled="false"
        android:text="@string/btn_next"
        android:textColor="@color/black"
        android:backgroundTint="#49BA02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


</androidx.constraintlayout.widget.ConstraintLayout>